<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.exasol</groupId>
    <artifactId>virtualschema-jdbc-adapter-main</artifactId>
    <version>${product.version}</version>
    <packaging>pom</packaging>
    <modules>
        <module>virtualschema-jdbc-adapter</module>
        <module>virtualschema-jdbc-adapter-dist</module>
    </modules>
    <properties>
        <product.version>2.0.0</product.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>9</java.version>
        <junit.version>5.4.2</junit.version>
        <junit.platform.version>1.4.2</junit.platform.version>
        <maven.surefire.version>2.22.1</maven.surefire.version>
        <vscommon.version>7.2.1</vscommon.version>
    </properties>
    <distributionManagement>
        <repository>
            <id>maven.exasol.com</id>
            <url>https://maven.exasol.com/artifactory/exasol-releases</url>
        </repository>
        <snapshotRepository>
            <id>maven.exasol.com</id>
            <url>https://maven.exasol.com/artifactory/exasol-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>maven.exasol.com</id>
            <url>https://maven.exasol.com/artifactory/exasol-releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>maven.exasol.com-snapshots</id>
            <url>https://maven.exasol.com/artifactory/exasol-snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.exasol</groupId>
            <artifactId>virtual-schema-common-java</artifactId>
            <version>${vscommon.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-junit</artifactId>
            <version>2.0.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <version>1.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.itsallcode</groupId>
            <artifactId>junit5-system-extensions</artifactId>
            <version>1.0.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.24.0</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>2.23.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>
    </dependencies>
</project>
